--- a/index.html
+++ b/index.html
@@ -19,6 +19,32 @@
 </head>
 </head>
 <body>
+<header>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <span class="navbar-brand"><i class="fas fa-book-open"></i></span>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarColor03">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="https://www.amazon.com/gp/new-releases/books" target="_blank">New Releases <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://www.amazon.com/best-sellers-books-Amazon/zgbs/books" target="_blank">Best Sellers</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://www.amazon.com/b?ie=UTF8&node=17143709011" target="_blank">Book of the Month</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://www.amazon.co.uk/Best-Sellers-Kindle-Store-eBooks/zgbs/digital-text/341689031" target="_blank">Kindle: Best Sellers</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+</header>
+<main></main>
+<footer></footer>
     
 </body>
 </html>
