img folder added with bg and quote img

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 </head>
 <body>
-<header>
+<header><!-- NavBar-->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <span class="navbar-brand"><i class="fas fa-book-open"></i></span>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
@@ -43,7 +43,9 @@
     </div>
   </nav>
 </header>
-<main></main>
+<main>
+  <h2>Test</h2>
+</main>
 <footer></footer>
     
 </body>
