--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
   </nav>
 </header>
 <main>
-  <h2>Test</h2>
+  <div class="container">
+    <div class="col-sm-12 quote"></div>
+  
+  </div>
 </main>
 <footer></footer>
     
