search box added to HTML

--- a/index.html
+++ b/index.html
@@ -45,7 +45,14 @@
 </header>
 <main>
   <div class="container">
-    <div class="col-sm-12 quote"></div>
+    <div class="col-sm-6 quote"></div>
+    <div class="row">
+      <div class="col-sm-12"><!-- Search Box-->
+        <input id = "search-field" type = "text" placeholder = "Search for Books.." />
+      
+      
+      </div>
+    </div>
   
   </div>
 </main>
