--- a/index.html
+++ b/index.html
@@ -45,14 +45,12 @@
 </header>
 <main>
   <div class="container">
-    <div class="col-sm-6 quote"></div>
-    <div class="row">
-      <div class="col-sm-12"><!-- Search Box-->
-        <input id = "search-field" type = "text" placeholder = "Search for Books.." />
-      
+    <div class="col-sm-12 quote"></div>
+    <div class="col-sm-12 col-md-8 col-lg-6 mx-auto input-group">
+      <input id = "searchField" type = "text" placeholder = "Search for Books" class = "form-control" />
+      <button class = "btn btn-primary"><i class="fas fa-search"></i></button>
       
       </div>
-    </div>
   
   </div>
 </main>
