JS output area added to HTML

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 </head>
 <body>
-<header><!-- NavBar-->
+<header><!-- NavBar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <span class="navbar-brand"><i class="fas fa-book-open"></i></span>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
@@ -44,13 +44,13 @@
   </nav>
 </header>
 <main>
-  <div class="container">
-    <div class="col-sm-12 quote"></div>
-    <div class="col-sm-12 col-md-8 col-lg-6 mx-auto input-group">
+  <div class="container"> 
+    <div class="col-sm-12 quote"></div> <!-- Quote Img -->
+    <div class="col-sm-12 col-md-8 col-lg-6 mx-auto input-group"> <!-- Search Field and button-->
       <input id = "searchField" type = "text" placeholder = "Search for Books" class = "form-control" />
       <button class = "btn btn-primary"><i class="fas fa-search"></i></button>
-      
-      </div>
+    </div>
+    <div id="output"></div> <!-- Book Search Output-->
   
   </div>
 </main>
