loader gif added and styled

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
   <div class="container"> 
     <div class="col-sm-12 quote"></div> <!-- Quote Img -->
     <div class="col-sm-12 col-md-8 col-lg-6 mx-auto input-group"> <!-- Search Field and button-->
-      <input id = "searchField" type = "text" placeholder = "Search for Books" class = "form-control" />
-      <button class = "btn btn-primary"><i class="fas fa-search"></i></button>
+      <input id = "searchField" type = "text" placeholder = "Search for Books" class = "form-control" oninput="loader()" />
+      <button class = "btn btn-primary" onclick="getBookInfo()"><i class="fas fa-search"></i></button>
     </div>
     <div id="output"></div> <!-- Book Search Output-->
   
