--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <div class="searchHeader">
         <h2>Search Results</h2>
       </div>
-      <div id="output">
+      <div id="output" class = "outputStyle">
       </div> <!-- Book Search Output-->
     </div>
   
