next and prev buttons added to html

--- a/index.html
+++ b/index.html
@@ -53,8 +53,13 @@
       <div class="searchHeader">
         <h2>Search Results</h2>
       </div>
-      <div id="output" class = "outputStyle">
-      </div> <!-- Book Search Output-->
+      <div id="output" class = "outputStyle"></div> <!-- Book Search Output-->
+      <div id="pagination_id">
+        <button class="nxt" onclick="load_next_page()">Next Page</button>
+      </div>
+      <div id="pagination_id">
+        <button class="prev" onclick="load_prev_page()">Previous Page</button>
+      </div>
     </div>
   
   </div>
