input placeholder edited

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <div class="container"> 
     <div class="col-sm-12 mx-auto quote"></div> <!-- Quote Img -->
     <div class="col-sm-12 col-md-8 col-lg-6 mx-auto input-group"> <!-- Search Field and button-->
-      <input id = "searchField" type = "text" placeholder = "Search for Books" class = "form-control" oninput="loader()" />
+      <input id = "searchField" type = "text" placeholder = "Search for Books or an Author" class = "form-control" oninput="loader()" />
       <button class = "btn btn-primary" id = "searchClick" onclick="getBookInfo()"><i class="fas fa-search"></i></button>
     </div>
     <div class="hiddenUntil">
