--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>BookLookUp</title>
   <link rel='icon' href='favicon.ico' type='image/x-icon'/ >
+  <link rel="stylesheet" href="static/css/style.css" type="text/css" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />
-  <link rel="stylesheet" href="static/css/style.css" type="text/css" />
+
 </head>
 <body>
 <header><!-- NavBar -->
@@ -41,7 +42,7 @@
   <div class="container"> 
     <div class="col-sm-12 mx-auto quote"></div> <!-- Quote Img -->
     <div class="col-sm-12 col-md-8 col-lg-6 mx-auto input-group"> <!-- Search Field and button-->
-      <input id = "searchField" type = "text" placeholder = "Search for Books or an Author" class = "form-control" oninput="loader()" />
+      <input id = "searchField" type = "text" placeholder = "Search for Books or Authors" class = "form-control" oninput="loader()" />
       <button class = "btn btn-primary" id = "searchClick" onclick="getBookInfo()"><i class="fas fa-search"></i></button>
     </div>
     <div class="hiddenUntil">
