--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
   </div>
 </main>
 <br>
-<footer class ="page-footer container-fluid">
-  <p>&copy; 2019 David Tynan Milestone Project 2</p>
+<footer class ="page-footer">
+  <p>&copy;David Tynan-2019</p>
 </footer>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script> 
